ksql/v2/README.md
# Go API client for v2

No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)

## Overview
This API client was generated by the [OpenAPI Generator](https://openapi-generator.tech) project.  By using the [OpenAPI-spec](https://www.openapis.org/) from a remote server, you can easily generate an API client.

- API version: 0.0.1
- Package version: 1.0.0
- Build package: org.openapitools.codegen.languages.GoClientCodegen
For more information, please visit [https://confluent.slack.com/app_redirect?channel=ksqldb](https://confluent.slack.com/app_redirect?channel=ksqldb)

## Installation

Install the following dependencies:

```shell
go get github.com/stretchr/testify/assert
go get golang.org/x/oauth2
go get golang.org/x/net/context
```

Put the package under your project folder and add the following in import:

```golang
import sw "./v2"
```

To use a proxy, set the environment variable `HTTP_PROXY`:

```golang
os.Setenv("HTTP_PROXY", "http://proxy_name:proxy_port")
```

## Configuration of Server URL

Default configuration comes with `Servers` field that contains server objects as defined in the OpenAPI specification.

### Select Server Configuration

For using other server than the one defined on index 0 set context value `sw.ContextServerIndex` of type `int`.

```golang
ctx := context.WithValue(context.Background(), sw.ContextServerIndex, 1)
```

### Templated Server URL

Templated server URL is formatted using default variables from configuration or from context value `sw.ContextServerVariables` of type `map[string]string`.

```golang
ctx := context.WithValue(context.Background(), sw.ContextServerVariables, map[string]string{
	"basePath": "v2",
})
```

Note, enum values are always validated and all unused variables are silently ignored.

### URLs Configuration per Operation

Each operation can use different server URL defined using `OperationServers` map in the `Configuration`.
An operation is uniquely identified by `"{classname}Service.{nickname}"` string.
Similar rules for overriding default operation server index and variables applies by using `sw.ContextOperationServerIndices` and `sw.ContextOperationServerVariables` context maps.

```
ctx := context.WithValue(context.Background(), sw.ContextOperationServerIndices, map[string]int{
	"{classname}Service.{nickname}": 2,
})
ctx = context.WithValue(context.Background(), sw.ContextOperationServerVariables, map[string]map[string]string{
	"{classname}Service.{nickname}": {
		"port": "8443",
	},
})
```

## Documentation for API Endpoints

All URIs are relative to *https://api.confluent.cloud*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ClustersKsqldbcmV2Api* | [**CreateKsqldbcmV2Cluster**](docs/ClustersKsqldbcmV2Api.md#createksqldbcmv2cluster) | **Post** /ksqldbcm/v2/clusters | Create a Cluster
*ClustersKsqldbcmV2Api* | [**DeleteKsqldbcmV2Cluster**](docs/ClustersKsqldbcmV2Api.md#deleteksqldbcmv2cluster) | **Delete** /ksqldbcm/v2/clusters/{id} | Delete a Cluster
*ClustersKsqldbcmV2Api* | [**GetKsqldbcmV2Cluster**](docs/ClustersKsqldbcmV2Api.md#getksqldbcmv2cluster) | **Get** /ksqldbcm/v2/clusters/{id} | Read a Cluster
*ClustersKsqldbcmV2Api* | [**ListKsqldbcmV2Clusters**](docs/ClustersKsqldbcmV2Api.md#listksqldbcmv2clusters) | **Get** /ksqldbcm/v2/clusters | List of Clusters


## Documentation For Models

 - [EnvScopedObjectReference](docs/EnvScopedObjectReference.md)
 - [Error](docs/Error.md)
 - [ErrorSource](docs/ErrorSource.md)
 - [Failure](docs/Failure.md)
 - [GlobalObjectReference](docs/GlobalObjectReference.md)
 - [KsqldbcmV2Cluster](docs/KsqldbcmV2Cluster.md)
 - [KsqldbcmV2ClusterList](docs/KsqldbcmV2ClusterList.md)
 - [KsqldbcmV2ClusterSpec](docs/KsqldbcmV2ClusterSpec.md)
 - [KsqldbcmV2ClusterStatus](docs/KsqldbcmV2ClusterStatus.md)
 - [ListMeta](docs/ListMeta.md)
 - [ObjectMeta](docs/ObjectMeta.md)
 - [ObjectReference](docs/ObjectReference.md)
 - [TypedGlobalObjectReference](docs/TypedGlobalObjectReference.md)


## Documentation For Authorization



### api-key

- **Type**: HTTP basic authentication

Example

```golang
auth := context.WithValue(context.Background(), sw.ContextBasicAuth, sw.BasicAuth{
    UserName: "username",
    Password: "password",
})
r, err := client.Service.Operation(auth, args)
```


### confluent-sts-access-token


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A

Example

```golang
auth := context.WithValue(context.Background(), sw.ContextAccessToken, "ACCESSTOKENSTRING")
r, err := client.Service.Operation(auth, args)
```

Or via OAuth2 module to automatically refresh tokens and perform user authentication.

```golang
import "golang.org/x/oauth2"

/* Perform OAuth2 round trip request and obtain a token */

tokenSource := oauth2cfg.TokenSource(createContext(httpClient), &token)
auth := context.WithValue(oauth2.NoContext, sw.ContextOAuth2, tokenSource)
r, err := client.Service.Operation(auth, args)
```


## Documentation for Utility Methods

Due to the fact that model structure members are all pointers, this package contains
a number of utility functions to easily obtain pointers to values of basic types.
Each of these functions takes a value of the given basic type and returns a pointer to it:

* `PtrBool`
* `PtrInt`
* `PtrInt32`
* `PtrInt64`
* `PtrFloat`
* `PtrFloat32`
* `PtrFloat64`
* `PtrString`
* `PtrTime`

## Author

ksql-team@confluent.io

